# osv-rs

./: Cargo.toml  README.md  scell.cue
.github/workflows/: ci.yml  release.yml
osv-analyzer/: Cargo.toml  README.md  build.rs
osv-analyzer/examples/: analyze.rs  evaluate.rs  manifest_extraction.rs  version_comparison.rs
osv-analyzer/libosv-scalibr/: go.mod  go.sum  main.go  manifest.go  manifest.h  version.go  version.h
osv-analyzer/src/: evaluation.rs  ffi.rs  lib.rs  manifest.rs  package.rs  version.rs
osv-analyzer/tests/: analyze.rs  evaluate.rs  manifest.rs  version.rs
osv-db/: Cargo.toml  README.md
osv-db/src/: downloader.rs  errors.rs  lib.rs  modified_record.rs  osv_gs.rs
osv-db/src/types/: affected.rs  ecosystem.rs  mod.rs  modified_record.rs  reference.rs  severity.rs
osv-db/src/types/tests/: mod.rs
osv-db/tests/: concurrency.rs
osv-types/: Cargo.toml  README.md
osv-types/src/: affected.rs  credit.rs  ecosystem.rs  lib.rs  package.rs  range.rs  reference.rs  severity.rs
osv-types/src/tests/: mod.rs
osv-types/tests/: json.rs
src/types/: package.rs
