[workspace]
resolver = "3"
members = [
    "osv-db"
]

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
authors = [
    "Oleksii Pozhylenkov (Mr-Leshiy) <leshiy12345678@gmail.com>"
]
repository = "https://github.com/Mr-Leshiy/osv-rs"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(track_caller)'] }
warnings = "deny"
missing_docs = "allow"
let_underscore_drop = "deny"
non_ascii_idents = "deny"
single_use_lifetimes = "deny"
trivial_casts = "deny"
trivial_numeric_casts = "deny"

[workspace.lints.rustdoc]
broken_intra_doc_links = "deny"
invalid_codeblock_attributes = "deny"
invalid_html_tags = "deny"
invalid_rust_codeblocks = "deny"
bare_urls = "deny"
unescaped_backticks = "deny"

[workspace.lints.clippy]
pedantic = { level = "deny", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
todo = "deny"
unimplemented = "deny"
exit = "deny"
get_unwrap = "deny"
index_refutable_slice = "deny"
indexing_slicing = "deny"
match_wild_err_arm = "deny"
missing_panics_doc = "deny"
panic = "deny"
string_slice = "deny"
unchecked_time_subtraction = "deny"
unreachable = "deny"
missing_docs_in_private_items = "allow"
arithmetic_side_effects = "deny"
missing_errors_doc = "allow"
