[package]
name = "osv-analyzer"
version = "0.1.0"
description = "Rust bindings for the osv-scalibr functionality."
readme = "README.md"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
thiserror.workspace = true

[dev-dependencies]
test-case.workspace = true