[package]
name = "osv-analyzer"
version = "0.1.0"
description = "Rust bindings for the osv-scalibr functionality."
readme = "README.md"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
osv-types.workspace = true

thiserror.workspace = true
strum.workspace = true
dashmap = "6.1.0"

anyhow = "1.0.102"

[dev-dependencies]
test-case.workspace = true