[package]
name = "osv-db"
version = "0.6.1"
description = "A Rust library for syncing and querying the OSV (Open Source Vulnerabilities) database"
readme = "README.md"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
osv-types.workspace = true

tokio.workspace = true
futures = "0.3"
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
bytes = "1.11.1"
chrono.workspace = true
thiserror = "2"
csv = "1"
zip = "2"
strum.workspace = true
tempfile = "3.26.0"
itertools = "0.14.0"

[dev-dependencies]
anyhow = "1.0.102"
test-case.workspace = true
jsonschema.workspace = true

