[package]
name = "osv-types"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
strum.workspace = true

chrono.workspace = true

[dev-dependencies]
tokio.workspace = true
reqwest.workspace = true

test-case.workspace = true
jsonschema.workspace = true